--- a/bootstrap-resume-final.html
+++ b/bootstrap-resume-final.html
@@ -47,7 +47,7 @@
 
                             <p class="fw-bold">Hello, I am</p>
                             <p class ="display-2 fw-bold text-warning">Ankit Kumar</p>
-                            <h2>A professional Full Stack Web Developer</h2>
+                            <h2>A professional Front End Web Developer</h2>
                             <a href="#" class="btn btn-outline-danger px-3 m-2">Lean More</a>
                             <a href="#" class="btn btn-outline-light px-3 m-2">Contact Me</a>
                         </div>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="col-md-3 mx-auto my-3 ">
                         <div class="card">
-                               <img src="https://www.iaspaper.net/storage/2017/12/RTU-Papers.jpg" class="card-img-top img-thumbnai" alt="10th result">
+                               <img src="https://www.iaspaper.net/storage/2017/12/RTU-Papers.jpg" class="card-img-top img-thumbnai" alt="graduation result">
                                <div class="card-body">
                                    <h5 class="card-title text-center">Graduation</h5>
                                    <p class="card-text text-center">Completed from JECRC FOUNDATION, Jaipur at 89%</p>
